--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
       "density": "1.0"
     }
   ],
-  "start_url_": "index.html",
+  "start_url --> disabled so we can 'Save to Home Screen' with query parameter '?debug'": "index.html",
   "display": "standalone",
   "orientation": "portrait",
   "offline_enabled": true
